# computing-system-architecture-hw

./: .gitignore  CMakeLists.txt  README.md  hello_world.asm  helloworld.asm
hw1/: CMakeLists.txt  README.md  dockerfile  helloworld.asm  helloworld_broken.asm  hw1.md  makefile
hw1/output/: helloworld.lst  strace_output.txt  strace_output_broken.txt
hw1/task1/: helloworld.asm  helloworld_broken.asm  makefile
hw1/task1/output/: helloworld.lst  helloworld_broken.lst  strace_output.txt  strace_output_broken.txt
hw1/task2/: helloworld_broken.asm
hw1/task2/output/: helloworld.lst  helloworld_broken.lst  output_broken.txt  strace_output_broken.txt
hw2/: hw2.md
hw2/task1/: makefile  reverse_str.asm
hw2/task1/output/: reverse_str.lst  strace_output.txt
hw2/task2/: helloworld.asm  makefile  simple_calculator.asm
hw2/task2/output/: simple_calculator.lst  strace_output.txt
output/: helloworld.lst  helloworld_broken.lst  strace_output.txt  strace_output_broken.txt
